# YukonGUI

./: CMakeLists.txt  main.c
src/: Linkedlist.c  Linkedlist.h  controller.c  controller.h  deck.c  deck.h  gameCommands.c  gameCommands.h  main.c  view.c  view.h
